--- a/.github/workflows/mysqltest.yml
+++ b/.github/workflows/mysqltest.yml
@@ -61,10 +61,12 @@ jobs:
           sudo service apparmor restart
           echo "start mysql"
           sudo service mysql start
-          echo "set passwd"
+          echo "set authentication_string"
           sudo mysql -e "use mysql;update user set authentication_string='' where user='root';"
           sudo mysql -e "use mysql;select authentication_string from user where user='root';"
+          echo "change password"
           sudo mysql -e "use mysql;alter user 'root'@'localhost' identified with mysql_native_password by '123';"
+          echo "datadir is"
           sudo mysql -u root -p123  -e "select @@datadir;"
 
       - name: Install Sysbench
