--- a/.github/workflows/mysqltest.yml
+++ b/.github/workflows/mysqltest.yml
@@ -61,9 +61,11 @@ jobs:
           sudo service apparmor restart
           echo "start mysql"
           sudo service mysql start
+          sudo mysql -e "use mysql;set password for root@localhost = password('123')"
           echo "set authentication_string"
-          sudo mysql -e "use mysql;update user set authentication_string='' where user='root';"
-          sudo mysql -e "use mysql;select authentication_string from user where user='root';"
+          sudo mysql -e "use mysql;update user set authentication_string='' where user='root'"
+          echo "echo authentication_string"
+          sudo mysql -e "use mysql;select authentication_string from user where user='root'"
           echo "change password"
           sudo mysql -e "use mysql;alter user 'root'@'localhost' identified with mysql_native_password by '123';"
           echo "datadir is"
