--- a/.github/workflows/mysqltest.yml
+++ b/.github/workflows/mysqltest.yml
@@ -78,7 +78,7 @@ jobs:
           echo "mysql-user=root" >>/tmp/config.cfg
           echo "mysql-password=root" >>/tmp/config.cfg
           echo "mysql-db=test" >>/tmp/config.cfg
-          echo "threads=4" >>/tmp/config.cfg
+          echo "threads=32" >>/tmp/config.cfg
           echo "report-interval=10" >>/tmp/config.cfg
           echo "db-driver=mysql" >>/tmp/config.cfg
 
@@ -86,11 +86,11 @@ jobs:
         run: |
           cat /proc/cpuinfo | grep 'core id'
           sudo df -h /
-          sudo sysbench --config-file=/tmp/config.cfg oltp_point_select --tables=4 --table-size=1000000 prepare
+          sudo sysbench --config-file=/tmp/config.cfg oltp_point_select --tables=32 --table-size=100000 prepare
           sudo df -h /
-          sudo sysbench --config-file=/tmp/config.cfg oltp_read_only --tables=4 --time=20 --table-size=1000000 run
-          sudo sysbench --config-file=/tmp/config.cfg oltp_write_only --tables=4 --time=20 --table-size=1000000 run
-          sudo sysbench --config-file=/tmp/config.cfg oltp_read_write --tables=4 --time=20 --table-size=1000000 run
-          sudo sysbench --config-file=/tmp/config.cfg oltp_point_select --tables=4 --table-size=1000000 cleanup
+          sudo sysbench --config-file=/tmp/config.cfg oltp_read_only --tables=32 --time=20 --table-size=100000 run
+          sudo sysbench --config-file=/tmp/config.cfg oltp_write_only --tables=32 --time=20 --table-size=100000 run
+          sudo sysbench --config-file=/tmp/config.cfg oltp_read_write --tables=32 --time=20 --table-size=100000 run
+          sudo sysbench --config-file=/tmp/config.cfg oltp_point_select --tables=32 --table-size=100000 cleanup
           sudo df -h /
 
