--- a/integration/Makefile
+++ b/integration/Makefile
@@ -1,7 +1,6 @@
 DURATION ?= 10
 
-all: xattrs fsx
-
+all: xattrs fsx s3test
 
 xattrs:
 	touch /tmp/jfs/test_xattrs
@@ -22,3 +21,8 @@ secfs.test:
 	git clone https://github.com/billziss-gh/secfs.test.git
 	make -C secfs.test >secfs.test-build-integration.log 2>&1
 
+s3test:
+	git clone https://github.com/ceph/s3-tests.git
+	sudo apt-get update
+	sudo apt-get install python3-virtualenv
+	cd s3-tests && ./bootstrap && cp s3tests.conf.SAMPLE config.yml && sed -i '0,/^access_key.*/s/^access_key.*/access_key = testUser/' config.yml && sed -i '0,/^secret_key.*/s/^secret_key.*/secret_key = testUserPassword/' config.yml && S3TEST_CONF=./config.yml ./virtualenv/bin/nosetests -v --collect-only
