--- a/.github/workflows/s3test.yml
+++ b/.github/workflows/s3test.yml
@@ -44,11 +44,11 @@ jobs:
         run: |
           sudo ./juicefs format redis://127.0.0.1:6379/1 pics
 
-      #      - name: Start Juicefs Gateway
-      #        run: |
-      #          sudo MINIO_ROOT_USER=minioadmin \
-      #          MINIO_ROOT_PASSWORD=minioadmin \
-      #          ./juicefs gateway redis://localhost:6379/1 localhost:8000 &
+            - name: Start Juicefs Gateway
+              run: |
+                sudo MINIO_ROOT_USER=minioadmin \
+                MINIO_ROOT_PASSWORD=minioadmin \
+                ./juicefs gateway redis://localhost:6379/1 localhost:8000 &
 
       - name: S3Test
         run: |
@@ -60,4 +60,4 @@ jobs:
           cp s3tests.conf.SAMPLE config.yml
           sed -i '0,/^access_key.*/s/^access_key.*/access_key = minioadmin/' config.yml
           sed -i '0,/^secret_key.*/s/^secret_key.*/secret_key = minioadmin/' config.yml
-          S3TEST_CONF=./config.yml ./virtualenv/bin/nosetests -v --collect-only
+          S3TEST_CONF=./config.yml ./virtualenv/bin/nosetests -v
