--- a/.github/workflows/mysqltest_bigtable.yml
+++ b/.github/workflows/mysqltest_bigtable.yml
@@ -1,7 +1,15 @@
 name: "mysqltest"
 
 on:
+  push:
+    branches:
+      - 'release-**'
+    paths-ignore:
+      - 'docs/**'
   pull_request:
+    #The branches below must be a subset of the branches above
+    branches:
+      - 'release-**'
     paths-ignore:
       - 'docs/**'
 
