--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -1,6 +1,11 @@
 name: "elastictest"
 
+
 on:
+  push:
+    branches: [ main ]
+    paths-ignore:
+      - 'docs/**'
   pull_request:
     #The branches below must be a subset of the branches above
     branches: [ main ]
