--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -51,8 +51,8 @@ jobs:
           wget -qO - https://artifacts.elastic.co/GPG-KEY-elasticsearch | sudo apt-key add -
           sudo apt-get install apt-transport-https
           echo "deb https://artifacts.elastic.co/packages/6.x/apt stable main" | sudo tee -a /etc/apt/sources.list.d/elastic-6.x.list
-          sudo apt-get update && sudo apt-get install elasticsearch
-          sudo service elasticsearch status
+          sudo apt-get update
+          sudo apt-get install -y elasticsearch
 
       - name: Change Datadir
         run: |
