--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -61,7 +61,6 @@ jobs:
           sudo sed  -i "s?^path\.data.*?path\.data: /tmp/jfs/?" /etc/elasticsearch/elasticsearch.yml
           sudo cat /etc/elasticsearch/elasticsearch.yml
           sudo service elasticsearch start
-          sudo service elasticsearch status
           sudo ls -l /tmp/jfs/
 
 
@@ -70,9 +69,11 @@ jobs:
         with:
           python-version: '2.7'
       - run: |
+          sudo service elasticsearch status
+          curl 127.0.0.1:9200
           git clone https://github.com/logzio/elasticsearch-stress-test.git
           cd elasticsearch-stress-test
           pip install elasticsearch
-          df -lh
+          df -lh /tmp/jfs/
           python elasticsearch-stress-test.py --es_address 127.0.0.1 --indices 10 --documents 10 --clients 1 --seconds 30 --number-of-shards 1 --number-of-replicas 0 --bulk-size 5000 --max-fields-per-document 10 --max-size-per-field 50 --stats-frequency 15
-          df -lh
+          df -lh /tmp/jfs/
