--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -70,6 +70,7 @@ jobs:
           python-version: '2.7'
       - run: |
           sudo service elasticsearch status
+          sudo netstat -anp | grep java
           curl 127.0.0.1:9200
           git clone https://github.com/logzio/elasticsearch-stress-test.git
           cd elasticsearch-stress-test
