--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -78,6 +78,6 @@ jobs:
           git clone https://github.com/logzio/elasticsearch-stress-test.git
           cd elasticsearch-stress-test
           pip install elasticsearch
-          df -lh /tmp/jfs/
+          sudo ls -lh /tmp/jfs/
           python elasticsearch-stress-test.py --es_address 127.0.0.1 --indices 10 --documents 10 --clients 1 --seconds 30 --number-of-shards 1 --number-of-replicas 0 --bulk-size 5000 --max-fields-per-document 10 --max-size-per-field 50 --stats-frequency 15
-          df -lh /tmp/jfs/
+          sudo ls -lh /tmp/jfs/
