--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -83,3 +83,14 @@ jobs:
           --seconds 30 --number-of-shards 1 --no-cleanup --number-of-replicas 0 --bulk-size 5000  \
           --max-fields-per-document 10 --max-size-per-field 50 --stats-frequency 15
           sudo ls -lh /tmp/jfs/
+
+    - name: Insert Data
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.8'
+    - run: |
+        pip install tornado
+        git clone https://github.com/oliver006/elasticsearch-test-data.git
+        cd elasticsearch-test-data
+        python es_test_data.py --es_url=http://localhost:9200
+        sudo ls -lh /tmp/jfs/
