--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -96,3 +96,4 @@ jobs:
           cd elasticsearch-test-data
           python3 es_test_data.py --es_url=http://localhost:9200
           sudo ls -l /tmp/jfs/
+          sudo ls -lh /var/lib/elasticsearch/
