--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -52,9 +52,11 @@ jobs:
         with:
           python-version: '3.8'
       - run: |
-          sudo pip3 install esrally
+          echo "install esrally"
+          sudo pip install esrally
+          sudo ls -l ~/.rally/
           sudo chmod  777 /data/jfs/
           sudo ls -l /data/jfs/
           echo "JAVA_HOME"
           echo $JAVA_HOME
-          JAVA_HOME=$JAVA_HOME_11_X64 esrally race --track=geonames --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'"
+          esrally race --track=geonames --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'"
