--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -60,3 +60,5 @@ jobs:
           echo $JAVA_HOME
           esrally race --track=geonames --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'"
           sudo ls -l /data/jfs/
+          "echo rally dir"
+          sudo ls -l ~/.rally/
