--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -58,7 +58,15 @@ jobs:
           sudo ls -l /data/jfs/
           echo "JAVA_HOME"
           echo $JAVA_HOME
-          esrally race --track=geonames --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'"
+          esrally race --track=geonames --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'" &
+          echo "data jfs dir"
+          sleep 3m
           sudo ls -l /data/jfs/
-          "echo rally dir"
-          sudo ls -l ~/.rally/
+          sleep 3m
+          sudo ls -l /data/jfs/
+          sleep 3m
+          sudo ls -l /data/jfs/
+          sleep 3m
+          sudo ls -l /data/jfs/
+          sleep 3m
+          sudo ls -l /data/jfs/
