--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -52,6 +52,13 @@ jobs:
         with:
           python-version: '3.8'
       - run: |
+          echo "install esrally"
+          sudo pip install esrally
+          sudo chmod  777 /data/jfs/
+          sudo ls -l /data/jfs/
+          echo "JAVA_HOME"
+          echo $JAVA_HOME
           sudo pip install esrally
           sudo chmod  777 /data/jfs/
           esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'"
+          sudo ls -l /data/jfs/
