--- a/.github/workflows/elastictest_cleanlog.yml
+++ b/.github/workflows/elastictest_cleanlog.yml
@@ -14,7 +14,7 @@ on:
 
 
 jobs:
-  elastictest:
+  elastictest_cleanlog:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Go
@@ -52,9 +52,6 @@ jobs:
         with:
           python-version: '3.8'
       - run: |
-          echo "install esrally"
           sudo pip3 install esrally
           sudo chmod  777 /data/jfs/
-          sudo ls -l /data/jfs/
           esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'"
-          sudo ls -l /data/jfs/
