--- a/.github/workflows/elastictest_addls.yml
+++ b/.github/workflows/elastictest_addls.yml
@@ -56,6 +56,7 @@ jobs:
           sudo pip3 install esrally
           sudo chmod  777 /data/jfs/
           sudo ls -l /data/jfs/
-          esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'"
+          esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv
           sudo ls -l /data/jfs/
           sudo ls -la ~/
+          sudo ls -la /tmp/
