--- a/.github/workflows/elastictest_cleanlog.yml
+++ b/.github/workflows/elastictest_cleanlog.yml
@@ -54,4 +54,5 @@ jobs:
       - run: |
           sudo pip3 install esrally
           sudo chmod  777 /data/jfs/
-          esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'"
+          esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'" &
+          for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
