--- a/.github/workflows/elastictest.yml
+++ b/.github/workflows/elastictest.yml
@@ -56,6 +56,6 @@ jobs:
           sudo pip3 install esrally
           sudo chmod  777 /data/jfs/
           sudo ls -l /data/jfs/
-          esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'"
-          sudo ls -l /data/jfs/
+          esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'" &
           for i in {1..19}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
+          sudo ls -l /data/jfs/
