--- a/.github/workflows/elastictest_addls.yml
+++ b/.github/workflows/elastictest_addls.yml
@@ -56,8 +56,9 @@ jobs:
           sudo pip3 install esrally
           sudo chmod  777 /data/jfs/
           sudo ls -l /data/jfs/
-          esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv
+          esrally race --track=geopoint --distribution-version=6.5.3 --car-params="data_paths:'/data/jfs'" --report-file=/tmp/report.md --report-format=csv &
+          for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
           sudo ls -l /data/jfs/
           sudo ls -la ~/
           sudo ls -la /tmp/
-          for i in {1..20}; do sleep 5m;echo "num $i";cat ~/.rally/logs/rally.log;done
+          cat /tmp/report.md
