--- a/.github/workflows/ltpsyscallsmiddle.yml
+++ b/.github/workflows/ltpsyscallsmiddle.yml
@@ -3,12 +3,14 @@ name: "ltp"
 on:
   push:
     branches:
+      - main
       - 'release-**'
     paths-ignore:
       - 'docs/**'
   pull_request:
     #The branches below must be a subset of the branches above
     branches:
+      - main
       - 'release-**'
     paths-ignore:
       - 'docs/**'
