--- a/.github/workflows/pjdfstest.yml
+++ b/.github/workflows/pjdfstest.yml
@@ -2,12 +2,16 @@ name: "pjdfstest"
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+      - 'release-**'
     paths-ignore:
       - 'docs/**'
   pull_request:
     #The branches below must be a subset of the branches above
-    branches: [ main ]
+    branches:
+      - main
+      - 'release-**'
     paths-ignore:
       - 'docs/**'
 
